--- a/app/src/main/res/layout/activity_cominity.xml
+++ b/app/src/main/res/layout/activity_cominity.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Comminity "
+        android:text="@string/comminity"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
